# zakwaswashinator

./: README.md
thermo_reg_1/: .cproject  .project  CMakeLists.txt  sdkconfig  sdkconfig.old
thermo_reg_1/main/: CMakeLists.txt  enkoder_isr.c  enkoder_isr.cpp  enkoder_isr.h  i2c_manual.cpp  i2c_manual.h  init_ESP.cpp  init_ESP.h  interpreter.c  interpreter.cpp  interpreter.h  main.c  main.cpp  main.h  mcp3425a1.cpp  mcp3425a1.h  pid.c  pid.cpp  pid.h  port_desc.h  ssd1306.h  tcp_ip_server.c  tcp_ip_server.cpp  tcp_ip_server.h  utils.cpp  utils.h  wifi_sta.c  wifi_sta.cpp  wifi_sta.h  xi2c.c  xi2c.h
